Yan: finalizing documentation and Controller.
