# SpringBoot/src/main/java/learning/springboot/controller/MainController.java
@@ -1,11 +1,11 @@
-package Learning.springboot.controller;
+package learning.springboot.controller;
 
-import Learning.springboot.model.UserData;
-import Learning.springboot.repository.UserDataRepository;
-import Learning.springboot.util.UtilMethods;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.github.fge.jsonpatch.JsonPatch;
 import com.github.fge.jsonpatch.JsonPatchException;
+import learning.springboot.model.UserData;
+import learning.springboot.repository.UserDataRepository;
+import learning.springboot.util.UtilMethods;
 import lombok.AllArgsConstructor;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -40,47 +40,54 @@ public class MainController {
 
     @GetMapping(produces = {"application/hal+json"})
     @ResponseStatus(HttpStatus.OK)
-    public List <UserData> showDataBase() {
+    public CollectionModel<UserData> showAllUsers() {
 
-//        List<UserData> users = new ArrayList<>(userDAO.getUsers());
-//
-//        users.forEach(data -> data.add(linkTo(methodOn(MainController.class).showDataId(data.getRg())).withRel("get")));
-//
-//        var selfLink = linkTo(methodOn(MainController.class).showDataBase()).withSelfRel();
+        List<UserData> userList = new ArrayList<>(userDAO.getUsers());
 
-//        return CollectionModel.of(users, selfLink);
-       return userDAO.getUsers();
+        userList.forEach(data -> data.add(linkTo(methodOn(MainController.class).showUserInfoById(data.getRg())).withRel("get")));
+
+        var selfLink = linkTo(methodOn(MainController.class).showAllUsers()).withSelfRel();
+
+        logger.info("m=showAllUsers  userList={} ", userList);
+
+        return CollectionModel.of(userList, selfLink);
     }
 
     @GetMapping(value = "/{rg}")
-    public EntityModel<UserData> showDataId(@PathVariable int rg) {
+    @ResponseStatus(HttpStatus.OK)
+    public EntityModel<UserData> showUserInfoById(@PathVariable int rg) {
         var user = userDAO.getUser(rg);
-        user.add(linkTo(methodOn(MainController.class).showDataBase()).withRel("/user"));
+        user.add(linkTo(methodOn(MainController.class).showAllUsers()).withRel("/user"));
 
+        logger.info("m=showUserInfo  user={} ", user);
         return EntityModel.of(user);
     }
 
     @PostMapping()
     @ResponseStatus(HttpStatus.CREATED)
-    public void saveMultiple(@RequestBody @Valid List<UserData> data) {
-        userDAO.saveUsers(data);
-        logger.info("Se esta lendo isso, essas informacoes foram salvas : {} ", data);
+    public void createUSers (@RequestBody @Valid List<UserData> userList) {
+        userDAO.saveUsers(userList);
+        logger.info("m=createUsers  users={} ", userList);
     }
 
     @DeleteMapping("/{rg}")
     @ResponseStatus(HttpStatus.OK)
-    public void delete(@PathVariable("rg") Integer rg) {
+    public void deleteUserById(@PathVariable("rg") Integer rg) {
 
+        logger.info("m=deleteUserById  rg={} ", rg);
         userDAO.deleteUser(rg);
     }
 
     @PutMapping("/{rg}")
     @ResponseStatus(HttpStatus.OK)
-    public void changeObject(@PathVariable("rg") Integer rg, @RequestBody @Valid UserData data) {
-        userDAO.changeUser(data, rg);
+    public void updateUser(@PathVariable("rg") Integer rg, @RequestBody @Valid UserData user) {
+
+        logger.info("m=updateUser  rg={} updatedUser={}", rg, user);
+        userDAO.changeUser(user, rg);
     }
 
     @PatchMapping(path = "/{id}")
+    @ResponseStatus(HttpStatus.OK)
     public ResponseEntity<UserData> updateCustomer(@PathVariable Integer id, @RequestBody JsonPatch patch) throws JsonPatchException {
         try {
             UserData customer = userDAO.getUser(id);
